examples/type_system/failing/157_match_tuple_missing_catchall_general.flx
fn main() -> Unit {
    let t = (1, true)
    let _x = match t {
        (1, true) -> 1,
        (2, false) -> 2,
    }
}
